# quadstorm

./: .gitignore  Cargo.toml  README.md  parts
common/: Cargo.toml
common-esp/: Cargo.toml
common-esp/src/: lib.rs
common-messages/: Cargo.toml
common-messages/src/: lib.rs
common/src/: lib.rs
docs/: components.md
drone/: Cargo.toml
drone/.cargo/: config.toml
drone/src/: defmt.rs  lib.rs  main.rs  motors.rs  sensor_fusion.rs
drone/src/esp-ikarus/: main.rs
drone/src/esp_ikarus/: bmi323.rs  lsm6ds3.rs  main.rs  mod.rs
esp/: Cargo.toml  README.md
esp-ikarus/: Cargo.toml
esp-ikarus/src/: lib.rs  lsm6ds3.rs  motors.rs
esp-ikarus/src/motors/: mod.rs  pwm.rs  rmt.rs
esp/.cargo/: config.toml
esp/communication/: Cargo.toml
esp/communication/src/: lib.rs
esp/drone/: Cargo.toml
esp/drone/src/: lib.rs  main.rs
esp/drone/src/esp_ikarus/: bmi323.rs  main.rs
esp/remote/: Cargo.toml
esp/remote/src/: main.rs
esp32c6-code/: Cargo.toml
frame/: frame_mk0-Connect.3mf  frame_mk0.20251219-101210.FCBak  frame_mk0.FCStd
gazebo/worlds/: empty_world.sdf
hardware/mainboard/: imu_bmi323.kicad_sch  imu_lsm6ds3.kicad_sch  mainboard.kicad_pcb  mainboard.kicad_prl  mainboard.kicad_pro  mainboard.kicad_sch  power.kicad_sch
hardware/mainboard/LIB_MP2338GTL-Z/MP2338GTL-Z/KiCad/: MP2338GTL-Z.dcm  MP2338GTL-Z.lib  MP2338GTL-Z.mod  MP2338GTLZ.kicad_mod
hardware/mainboard/Parts/ESP32-C6-MINI-4/: ESP32-C6-MINI-1-N4.kicad_sym  XCVR_ESP32-C6-MINI-1-N4.kicad_mod
hardware/mainboard/Parts/MP2338GTL-Z/: MP2338GTL-Z.kicad_sym
imu-proc/: Cargo.toml
imu-proc/src/: main.rs
mainboard/: mainboard_mk1.kicad_pcb  mainboard_mk1.kicad_pro  mainboard_mk1.kicad_sch
mainboard/esp32-c6-supermini/: ESP32-C3_SUPERMINI_TH.kicad_sym  MODULE_ESP32-C3_SUPERMINI_TH.kicad_mod
relay/: Cargo.toml
remote/: Cargo.toml
remote-android/: settings.gradle.kts
remote-android/app/: build.gradle.kts
remote-android/app/src/androidTest/java/quadstorm/remote/: ExampleInstrumentedTest.kt
remote-android/app/src/main/: AndroidManifest.xml
remote-android/app/src/main/java/quadstorm/remote/: MainActivity.kt
remote-android/app/src/main/java/quadstorm/remote/ui/theme/: Color.kt  Theme.kt
remote-android/app/src/main/res/values/: strings.xml  themes.xml
remote-android/app/src/test/java/quadstorm/remote/: ExampleUnitTest.kt
remote-android/gradle/wrapper/: gradle-wrapper.properties
remote-esp/: Cargo.toml
remote-esp/src/: esp_now.rs  main.rs
remote-relay/: Cargo.toml
remote-relay/.cargo/: config.toml
remote-relay/src/: main.rs
remote-terminal/: Cargo.toml  README.md
remote-terminal/src/: control_tab.rs  logs_tab.rs  main.rs  rtt.rs
remote-ui/: Cargo.toml
remote-ui/src/: main.rs  plots.rs  rtt.rs  ui.rs
remote/remote-esp/: Cargo.toml
remote/remote-esp/src/: esp_now.rs  lib.rs
remote/remote-terminal/: Cargo.toml
remote/remote-terminal/src/: main.rs
remote/src/: main.rs  rtt.rs  ui.rs
