[package]
name = "remote"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[[bin]]
bench = false
doctest = false
name = "remote"
path = "src/main.rs"
test = false

[dependencies]
common-esp = { path = "../common-esp" }
common-messages = { path = "../common-messages" }
defmt = { version = "1.0.1", features = ["alloc"] }
embassy-executor = { version = "0.9.1", features = ["defmt"] }
embassy-futures = "0.1.2"
embassy-sync = "0.7.2"
embassy-time = { version = "0.5.0", features = ["defmt"] }
esp-alloc = "0.9.0"
esp-backtrace = { version = "0.18.1", features = [
  "custom-halt",
  "defmt",
  "esp32c6",
  "panic-handler"
] }
esp-bootloader-esp-idf = { version = "0.4.0", default-features = false, features = [
  "defmt",
  "esp32c6"
] }
esp-hal = { version = "1.0.0", features = ["defmt", "esp32c6", "unstable"] }
esp-println = { version = "0.16.1", default-features = false, features = [
  "critical-section",
  "esp32c6",
  "jtag-serial",
] }
esp-radio = { version = "0.17.0", features = [
  "defmt",
  "esp-alloc",
  "esp-now",
  "esp32c6",
  "unstable",
  "wifi",
] }
esp-rtos = { version = "0.2.0", features = [
  "defmt",
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32c6",
] }
rtt-target = { version = "0.6.2", features = ["defmt"] }
static_cell = { version = "2.1.1" }
thiserror = { version = "2.0.17", default-features = false }
wincode = { version = "0.2.5", default-features = false, features = [
  "alloc",
  "derive"
] }
