[package]
name = "remote"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
bevy = { version = "0.18.0", default-features = false, features = [
  "default_app",
  "default_platform",
  "3d_bevy_render",
  "bevy_ui_render",
  "common_api",
  "dev",
  "picking",
  "scene",
] }
bevy_egui = "0.39.1"
common-messages = { path = "../common-messages" }
defmt-decoder = "1.1.0"
defmt-parser = "1.0.0"
egui_plot = "0.34.1"
object = { version = "0.38.1", default-features = false, features = [
  "elf",
  "read_core",
  "std",
] }
probe-rs = { git = "https://github.com/probe-rs/probe-rs", rev = "8abe521572dc2bfb0878de489547f0c3ed054c52" }

[profile.dev.package."*"]
opt-level = 3
