[package]
name = "remote-esp"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[lib]
bench = false
doctest = false
test = false

[[bin]]
bench = false
doctest = false
name = "remote-esp"
path = "src/main.rs"
test = false

[dependencies]
bincode = { version = "2.0.1", default-features = false, features = ["alloc"] }
common = { path = "../common" }
critical-section = "1.2.0"
# for more networking protocol support see https://crates.io/crates/edge-net
embassy-executor = { version = "0.9.1", features = ["log"] }
embassy-futures = "0.1.2"
embassy-net = { version = "0.7.1", features = [
  "dhcpv4",
  "log",
  "medium-ethernet",
  "tcp",
  "udp",
] }
embassy-sync = "0.7.2"
embassy-time = { version = "0.5.0", features = ["log"] }
embedded-io = "0.7.1"
embedded-io-async = "0.7.0"
esp-alloc = "0.9.0"
esp-backtrace = { version = "0.18.1", features = [
  "esp32c6",
  "panic-handler",
  "println",
] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32c6", "log-04"] }
esp-hal = { version = "1.0.0", features = ["esp32c6", "log-04", "unstable"] }
esp-println = { version = "0.16.1", features = ["esp32c6", "log-04"] }
esp-radio = { version = "0.17.0", features = [
  "esp-alloc",
  "esp-now",
  "esp32c6",
  "log-04",
  "smoltcp",
  "unstable",
  "wifi",
] }
esp-rtos = { version = "0.2.0", features = [
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32c6",
  "log-04",
] }
log = "0.4.27"
smoltcp = { version = "0.12.0", default-features = false, features = [
  "log",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
static_cell = { version = "2.1.1" }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
opt-level = "s"
debug = 2
debug-assertions = false
overflow-checks = false
lto = "fat"
incremental = false
# LLVM can perform better optimizations using a single thread
codegen-units = 1
